<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:text="@string/bmi_top"

        android:textSize="18sp"
        android:textStyle="bold"
        tools:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="67dp"
        android:textStyle="bold"
        android:text="@string/weight_top"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtWeight"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/input_weight" />

    <TextView
        android:id="@+id/txtLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editWeight"
        android:layout_toEndOf="@+id/txt_bmi_result"
        android:text="@string/weight_lb"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="172dp"
        android:text="@string/height_top"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editHeight1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:inputType="number"

        android:text="@string/height_input1" />

    <EditText
        android:id="@+id/editHeight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="240dp"
        android:ems="10"
        android:inputType="number"

        android:text="@string/height_input2" />

    <TextView
        android:id="@+id/txtfeet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtLB"
        android:layout_marginTop="226dp"
        android:text="@string/height_feet"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtInches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtLB"
        android:layout_marginBottom="250dp"
        android:text="@string/height_inches"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="175dp"
        android:text="@string/bmi_button" />

    <TextView
        android:id="@+id/txt_bmi_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="141dp"
        android:text="@string/bmi_result" />

    <TextView
        android:id="@+id/txtOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:text="@string/bmi_overweight" />

</RelativeLayout>